and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

August 21st, 2014 M.Asai (run-V09-06-144)
- Clean up previous tag. Addressing to bug report #1665.

August 21st, 2014 M.Asai (run-V09-06-143)
- Clear root logical volume pointers in G4Region when geometry is
  rebuilt from scratch.

July 17th, 2014 A.Dotti
- Bug fix for bug #1657: /random/setSeeds not working

July 11th, 2014 A.Dotti
- Fixing race condition in G4VUPLSplitter class

July 5th, 2014 A. Dotti
- Fixing data-race condition when creating RNG for workers in MT:
  G4UserWorkerThreadInitialization::SetupRNGEngine
  (Lock moved beginning of function before default engine is created)

July 1th, 2014, V. Ivanchenko
- G4PhysicsListHelper - minor fix in the default list of processeses:
    positron annihilation in muons and hadrons cannot be AtRest -
    these are rare high energy discrete processes. Equivalent fix was 
    for OrderingParameterTable (problem report #1598)

Jan 21st, 2014, M. Asai (run-V09-06-142)
- Making sure worker threads re-build physics tables as well when the
  master thread is requested to rebuild.

Dec 26th, 2013, M. Asai
- Change the order of setting world volume pointer to the transportation
  manager for worker thread to be the same as the master thread and the
  sequential mode, i.e. prior to invoking ConstructSDandField .

Dec 2nd, 2013, A. Dotti (run-V09-06-141)
- Adds protection for multiple runs to set SD and FieldMgr for worker
  threads only if master shadow corresponding pointers are !=0.
  This is needed to protect the case in which we use an invalid ptr
  between runs. Needs: geommng-V09-06-16

Dec 2nd, 2013, M. Asai (run-V09-06-140)
- Minor clean up.
