@@ -17,6 +17,10 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+October 16th, 2014 M.Asai (run-V09-06-145)
+- G4MTRunManager : Make sure G4RunManager::TerminateEventLoop() is
+  invoked at the end of run.
+
 August 21st, 2014 M.Asai (run-V09-06-144)
 - Clean up previous tag. Addressing to bug report #1665.
 
